# kk

./: .gitignore  AGENTS.md  Cargo.toml  chat-streaming.md  kk-agent.md  kk-connector-stream-plan.md  kk-connector.md  kk-controller.md  kk-gateway.md  kk-protocol.md  kk-record.md  kk-skill.md  kubeclaw-plan-agent-job.md  kubeclaw-plan-connector.md  kubeclaw-plan-gateway.md  kubeclaw-plan-skill.md  kubeclaw-protocol.md  lean.md  spawn.md
crates/kk-agent/: Cargo.toml
crates/kk-agent/src/: agent.rs  claude.rs  codex.rs  config.rs  gemini.rs  lib.rs  main.rs  phases.rs
crates/kk-agent/tests/: e2e_agent.rs
crates/kk-cli/: Cargo.toml
crates/kk-cli/src/: config.rs  main.rs  terminal.rs
crates/kk-connector/: Cargo.toml
crates/kk-connector/src/: config.rs  groups.rs  inbound.rs  lib.rs  main.rs  outbound.rs  platform.rs
crates/kk-connector/src/provider/: discord.rs  gchat.rs  github.rs  linear.rs  mod.rs  slack.rs  teams.rs  telegram.rs  whatsapp.rs
crates/kk-connector/tests/: e2e.rs  e2e_slack.rs  e2e_telegram.rs
crates/kk-connector/tests/common/: mod.rs
crates/kk-controller/: Cargo.toml
crates/kk-controller/src/: config.rs  crd.rs  lib.rs  main.rs
crates/kk-controller/src/reconcilers/: channel.rs  mod.rs  skill.rs
crates/kk-controller/tests/: k8s_channel.rs  k8s_skill.rs  mock_k8s.rs
crates/kk-core/: Cargo.toml
crates/kk-core/src/: health.rs  lib.rs  logging.rs  nq.rs  paths.rs  text.rs  types.rs
crates/kk-gateway/: Cargo.toml
crates/kk-gateway/src/: config.rs  lib.rs  main.rs  state.rs
crates/kk-gateway/src/launcher/: k8s.rs  local.rs  mod.rs
crates/kk-gateway/src/loops/: cleanup.rs  inbound.rs  mod.rs  results.rs  state_reload.rs
crates/kk-gateway/tests/: e2e_gateway.rs
crates/kk-gateway/tests/common/: mod.rs
