[package]
name = "kk-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "kk"
path = "src/main.rs"

[dependencies]
kk-core = { workspace = true }
kk-gateway = { path = "../kk-gateway", default-features = false }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
ratatui = "0.29"
crossterm = "0.28"
