[package]
name = "kk-connector"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "kk-connector"
path = "src/main.rs"

[dependencies]
kk-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
