[package]
name = "kk-connector"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "kk-connector"
path = "src/main.rs"

[dependencies]
kk-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
teloxide = { workspace = true }
reqwest = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
url = { workspace = true }
chrono = { workspace = true }
axum = { workspace = true }

[lib]
name = "kk_connector"
path = "src/lib.rs"

[dev-dependencies]
tempfile = "3"
