[package]
name = "kk-controller"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "kk-controller"
path = "src/main.rs"

[dependencies]
kk-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
kube = { workspace = true }
k8s-openapi = { workspace = true }
axum = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
futures = "0.3"
schemars = "0.8"
