[package]
name = "kk-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "kk-gateway"
path = "src/main.rs"

[lib]
name = "kk_gateway"
path = "src/lib.rs"

[dependencies]
kk-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
kube = { workspace = true }
k8s-openapi = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = "3"
filetime = "0.2"
